--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: "About"
-description: "Hey, this is BY."
+title: "关于我们"
+description: "你好，我是东南大学小明俱乐部。"
 header-img: "img/post-bg-rwd.jpg"
 ---
 
