--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Thinking will not overcome fear but action will."
+description: "让每个人都有平等获取知识的权力"
 ---
 
 {% for post in paginator.posts %}
